--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>liamm.lol</title>
+            <title>c4palot.xyz</title>
             <link rel="stylesheet" href="styles.css">
         </head>
         <body>
             <center>
                 <div id="content" class="centered">
-                    <img src="images/IMG_5775.png" height="90" width="90">
-                    <h1>LiamM</h1>
-                    <h2>hi! im liamm and i like to make animations, study weather and study the eas! hope to meet you soon <3</h2>
-                    <a href="https://youtube.com/@liammyt" class="button">YouTube</a>
-                    <a href="https://namemc.com/LiamMMC" class="button">NameMC</a>
-                    <a href="https://oaafy.org" class="button">oaafy!</a>
-                    <a href="https://64will64.xyz" class="button">will!</a>
+                    <img src="images/sigma.jpg" height="90" width="90">
+                    <h1>c4platot</h1>
+                    <h2>yourinfohere</h2>
+                    <a href="https://youtube.com/@capalotr6" class="button">YouTube</a>
+                    <a href="https://liamm.lol" class="button">liam!</a>
                 </div>
                     
             </center>
