--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>c4palot's website</title>
+            <title>c4palot.xyz</title>
             <link rel="stylesheet" href="styles.css">
         </head>
         <body>
