--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1>c4platot</h1>
                     <h2>i play r6 and shit!</h2>
-                    <a href="https://youtube.com/@capalotr6" class="button">YouTube</a>
+                    <a href="https://youtube.com/@capalotr6" class="button">yt!</a>
                     <a href="https://liamm.lol" class="button">liam!</a>
                 </div>
                     
