--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             <center>
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
-                    <h1>c4platot</h1>
-                    <h2>i play r6 and shit!</h2>
+                    <h1>c4palotR6</h1>
+                    <h2>i play R6 and shit!</h2>
                     <a href="https://youtube.com/@capalotr6" class="button">yt!</a>
                     <a href="https://liamm.lol" class="button">liam!</a>
                 </div>
