--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1>c4palotR6</h1>
                     <h2>i play R6 and shit!</h2>
-                    <a href="https://youtube.com/@capalotr6" class="button">yt!</a>
-                    <a href="https://liamm.lol" class="button">liam!</a>
+                    <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
+                    <a href="https://liamm.lol" class="button">Liam!</a>
                 </div>
                     
             </center>
