--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <title>c4palot's website</title>
             <link rel="stylesheet" href="styles.css">
         </head>
-        <body>
+        <body background="images/background.png">   
             <center>
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
