--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
             <title>c4palot's website</title>
             <link rel="stylesheet" href="styles.css">
         </head>
-        <body background="images/background.png">   
+        <body background="images/background.png"
+                audio src="audio/demonz.wav" autoplay>   
             <center>
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
