--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                     <h2>i play R6 and sometimes make YT videos!</h2>
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
+                    <a href="https://discord.gg/S4BdtNwPtP" class="button">TGE!</a>
                 </div>
                     
             </center>
