--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" href="styles.css">
         </head>
         <body background="images/background.png"
-                audio src="audio/demonz.wav" autoplay>   
+                <audio src="audio/demonz.wav" autoplay>   
             <center>
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
