--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
             <title>c4palot's website</title>
             <link rel="stylesheet" href="styles.css">
         </head>
-        <body background="images/background.png"
-                <audio src="audio/demonz.wav" autoplay>   
+        <body background="images/background.png"> 
             <center>
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
@@ -17,5 +16,5 @@
                 </div>
                     
             </center>
-        </body>
+        </body audio src="audio/demonz.wav" autoplay>
 </html>
