--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
                 </div>
                     
             </center>
-        </body audio src="audio/demonz.wav" autoplay>
+        </body>
 </html>
