--- a/index.html
+++ b/index.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>liamm.lol</title>
+            <title>c4palot's website</title>
             <link rel="stylesheet" href="styles.css">
         </head>
-        <body>
+        <body background="images/background.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/liamm.jpg" height="90" width="90">
-                    <h1 class=mcbold>LiamM</h1>
-                    <h2>hi! im liamm and i like to make animations, study weather and study the eas!</h2>
-
-                    <h2>hope to meet you soon! <3</h2>
-
-                        <h3>my discord is windows11pro!</h3>
-                    <a href="https://youtube.com/@liammyt" class="button">YouTube</a>
-                    <a href="https://namemc.com/LiamMMC" class="button">NameMC</a>
-                        
-                 <h2 id="dropdown-header1">Friends!</h2>
-                <div class="dropdown-container">
-                    <div class="dropdown-btns1">
-                        <a href="https://oaafy.org" class="button">oaafy!</a>
-                        <a href="https://64will64.xyz" class="button">will!</a> 
-                        <a href="https://diamondlifeyt.carrd.co/" class="button">diamond!</a>
-
-<h2 id="dropdown-header">Extras</h2>
-                <div class="dropdown-container">
-                    <div class="dropdown-btns">
-                        <a href="https://liamm.lol/xtrapages/catpage" class="button">Cat Pictures</a>
-                    </div>  
+                    <img src="images/sigma.jpg" height="90" width="90">
+                    <h1>c4palotR6</h1>
+                    <h2>i play R6 and sometimes make YT videos!</h2>
+                    <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
+                    <a href="https://liamm.lol" class="button">Liam!</a>
+                    <a href="https://discord.gg/S4BdtNwPtP" class="button">TGE!</a>
+                </div>
+                    
             </center>
         </body>
 </html>
