--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
-                    <h2 class=mcbust>i play R6 and sometimes make YT videos!</h2>
+                    <h2>i play R6 and sometimes make YT videos!</h2>
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">TGE!</a>
