--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">TGE!</a>
+                    <audio loop autoplay>
+    <source src="audio/SPEDUP.mp3" type="audio/mpeg">
+</audio>
+
                 </div>
                     
             </center>
