--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
         <head>
             <title>c4palot's website</title>
+                <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
             <link rel="stylesheet" href="styles.css">
         </head>
         <body background="images/background.png"> 
