--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
                     <h2 class=dabodytext>i play R6 and sometimes make YT videos!</h2>
-                    <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
+                    <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
+                    <a href="https://youtube.com/@capalotr6" class="button">Youtube!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
-                    <a href="https://discord.gg/S4BdtNwPtP" class="button">TGE!</a>
                     <audio loop autoplay>
     <source src="audio/SPEDUP.mp3" type="audio/mpeg">
 </audio>
