added spotify embed
don't mind the line breaks i'm fucking stupid and didn't know what to do.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
-                    <h2 class=dabodytext>i play R6 and sometimes make YT videos!</h2>
+                    <h4 class=dabodytext>i play R6 and sometimes make YT videos!</h4>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
                     <a href="https://youtube.com/@capalotr6" class="button">Youtube!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
-                    <audio loop autoplay>
-    <source src="audio/SPEDUP.mp3" type="audio/mpeg">
-</audio>
 
-                </div>
+                </div id="content" class="centered">
                     
-            </center>
-        </body>
+            </center id="content" class="centered">
+
+        </body id="content" class="centered">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1><center class="mcbold">Music!</center>
+       <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0UGz4PbQJMsFPdcRHmgrNW?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 </html>
