--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             </center id="content" class="centered">
 
         </body id="content" class="centered">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1><center class="mcbold">Music!</center>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1><center class="mcbold">Song Of The Day!</center>
        <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0UGz4PbQJMsFPdcRHmgrNW?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 </html>
