--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 
         </body id="content" class="centered">
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1><center class="mcbold">Song Of The Day!</center>
-       <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0UGz4PbQJMsFPdcRHmgrNW?utm_source=generator&theme=0" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+       <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1aHaTMzj8TmpRNnbRMwjxb?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 </html>
