--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
                     <a href="https://youtube.com/@capalotr6" class="button">Youtube!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
 
+                    <h2 id="dropdown-header1" class="mcbold">Song Of The Day!</h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1aHaTMzj8TmpRNnbRMwjxb?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+
                 </div id="content" class="centered">
                     
             </center id="content" class="centered">
 
         </body id="content" class="centered">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1><center class="mcbold">Song Of The Day!</center>
-       <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1aHaTMzj8TmpRNnbRMwjxb?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+   
 </html>
