--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="https://liamm.lol" class="button">Liam!</a>
 
                     <h2 id="dropdown-header1" class="mcbold">Song Of The Day!</h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2Hl0GIeh1JgDspbYGkPKl1?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/06LjScm4z9qef4FhCajYI1?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
