--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
                     <a href="https://youtube.com/@capalotr6" class="button">Youtube!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
+                    <a href="status.c4palot.xyz" class="button">Site Status!</a>
 
                     <h2 id="dropdown-header1" class="mcbold">Song Of The Day!</h2>
                     <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6UVRJFWafapKg7nGUgPnwh?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
