--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <h4 class=dabodytext>i play R6 and sometimes make YT videos!</h4>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
-                    <a href="https://youtube.com/@capalotr6" class="button">2nd YT!</a>
+                    <a href="https://www.youtube.com/@c4palot" class="button">2nd YT!</a>
                     <a href="https://liamm.lol" class="button">Liam!</a>
 
                     <h2 id="dropdown-header1" class="mcbold">Song Of The Day!</h2>
