--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd YT!</a>
-                    <a href="https://liamm.lol" class="button">Liam!</a>
+                    <a href="https://guns.lol/smellthis" class="button">SmellThis</a>
 
                     <h2 id="dropdown-header1" class="mcbold">¿ Song Of The Day ?</h2>
                     <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/704qSGogleVeb46KLsMl2e?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
