--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
-                    <h4 class=dabodytext>i play R6 and sometimes make YT videos!</h4>
+                    <h4 class=dabodytext>recovering R6 addict</h4>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd YT!</a>
