--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
                 <div id="content" class="centered">
                     <img src="images/sigma.jpg" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
-                    <h4 class=dabodytext>recovering R6 addict</h4>
+                    <h4 class=dabodytext>relapsed on seige</h4>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
                     <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd YT!</a>
-                    <a href="https://guns.lol/smellthis" class="button">SmellThis</a>
+                    <a href="https://guns.lol/smellthis" class="button">SmellThis!</a>
 
-                    <h2 id="dropdown-header1" class="mcbold">¿ Song Of The Day ?</h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3dnNDWgB0FAgjy9K1rSTKn?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold">¿ SOTD ?</h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1cD7Lr1DLamOUGkUCCwhjn?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
