--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="https://liamm.64will64.com/" class="button">LiamM!</a>
 
                     <h2 id="dropdown-header1" class="mcbold">¿ SOTD ?</h2>
-                    <center><iframe style="border-radius:12px" src="<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6ovJ4vtrLdONeRoTT4s4uw?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>></iframe></center>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6ovJ4vtrLdONeRoTT4s4uw?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
