--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="https://liamm.64will64.com/" class="button">LiamM!</a>
 
                     <h2 id="dropdown-header1" class="mcbold">¿ SOTD ?</h2>
-                    <center><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/pots/1754635560?i=1754635890"></iframe></center>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1VmWC3ZZwqpP79ifFC8LzI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
