--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body background="images/background.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/jw.png" height="90" width="90">
+                    <img src="images/pfp.gif" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
                     <h4 class=dabodytext>The Party Never Starts!!!</h4>
                     <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
