--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd YT!</a>
                     <a href="https://liamm.64will64.com/" class="button">LiamM!</a>
 
-                    <h2 id="dropdown-header1" class="mcbold">¿ SOTD ?</h2>
+                    <h2 id="dropdown-header1" class="mcbold"> SOTD </h2>
                     <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1VmWC3ZZwqpP79ifFC8LzI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
