--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
             <link rel="stylesheet" href="styles.css">
         </head>
-        <body background="images/background.png"> 
+        <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
                     <img src="images/pfp.gif" height="90" width="90">
