--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
                 <div id="content" class="centered">
                     <img src="images/pfp.gif" height="90" width="90">
                     <h1 class=mcbold>c4palotR6</h1>
-                    <h4 class=dabodytext>The Party Never Starts!!!</h4>
-                    <a href="https://discord.gg/S4BdtNwPtP" class="button">Discord!</a>
-                    <a href="https://youtube.com/@capalotr6" class="button">YT!</a>
-                    <a href="https://www.youtube.com/@c4palot" class="button">2nd YT!</a>
-                    <a href="https://liamm.64will64.com/" class="button">LiamM!</a>
+                    <h4 class=dabodytext>where tf is tpne</h4>
+                    <a href="https://discord.gg/S4BdtNwPtP" class="button">discord</a>
+                    <a href="https://youtube.com/@capalotr6" class="button">yt</a>
+                    <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
+                    <a href="https://liamm.64will64.com/" class="button">smellthis</a>
 
                     <h2 id="dropdown-header1" class="mcbold"> SOTD </h2>
                     <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1VmWC3ZZwqpP79ifFC8LzI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
