--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> SOTD </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4BLWggOkXE4uUcEQzn2Wcp?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> The Pre-Party </h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2rlWVKCWJo4vpOBl8RiYX4?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
