--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div id="content" class="centered">
                     <img src="images/pfp.gif" height="90" width="90">
                     <h1 class=mcbold>PrimeDingo</h1>
-                    <h4 class=dabodytext>where tf is tpne</h4>
+                    <h4 class=dabodytext>I AM THE MUSIC</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/PrimeDingo/overview" class="button">r6 tracker</a>
                     <a href="https://youtube.com/@capalotr6" class="button">yt</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
