--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/pfp.gif" height="90" width="90">
+                    <img src="images/IMG_0721.png" height="90" width="90">
                     <h1 class=mcbold>DingoGoons</h1>
                     <h4 class=dabodytext>I AM THE MUSIC</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/PrimeDingo/overview" class="button">r6 tracker</a>
