--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             <center>
                 <div id="content" class="centered">
                     <img src="images/IMG_0721.png" height="90" width="90">
-                    <h1 class=mcbold>C4PTUAH</h1>
-                    <h4 class=dabodytext>I AM THE MUSIC</h4>
+                    <h1 class=mcbold>c4ptuah</h1>
+                    <h4 class=dabodytext>MUSIC!</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/PrimeDingo/overview" class="button">r6 tracker</a>
                     <a href="https://youtube.com/@capalotr6" class="button">yt</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> cool songs </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1BpKJw4RZxaFB88NE5uxXf?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> cool song </h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5Jb2Hp5yGqFrxxodq5S2mh?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
