--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/IMG_0721.png" height="90" width="90">
+                    <img src="images/pfp.jpg" height="90" width="90">
                     <h1 class=mcbold>c4ptuah</h1>
                     <h4 class=dabodytext>PLZ DROP CARTI!!</h4>
-					<h4 class=dabodytext>BAFK DEC 6TH!</h4>
+					<h4 class=dabodytext>nettspend lover</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/PrimeDingo/overview" class="button">r6 tracker</a>
                     <a href="https://youtube.com/@capalotr6" class="button">yt</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> cool song </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2ihkSofNmj7ZWPr7oWz2Ya?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> i love nettspend </h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2j74DNrJ8TgnMEukERqnnm?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
