--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
             <center>
                 <div id="content" class="centered">
                     <img src="images/pfp.jpg" height="90" width="90">
-                    <h1 class=mcbold>c4ptuah</h1>
-                    <h4 class=dabodytext>PLZ DROP CARTI!!</h4>
-					<h4 class=dabodytext>nettspend lover</h4>
+                    <h1 class=mcbold>c4palot</h1>
+                    <h4 class=dabodytext>kill all jagers</h4>
+					<h4 class=dabodytext>scorin' u could put flex on my jersey yuh</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/c4ptuah/overview" class="button">r6 tracker</a>
                     <a href="https://youtube.com/@capalotr6" class="button">yt</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> i love nettspend </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2j74DNrJ8TgnMEukERqnnm?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> jumpout </h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5Vb4K4Xf4KPFupmhHi5COM?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
