--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/pfp.jpg" height="90" width="90">
+                    <img src="images/pfp.PNG" height="90" width="90">
                     <h1 class=mcbold>c4palot</h1>
                     <h4 class=dabodytext>kill all jagers</h4>
 					<h4 class=dabodytext>scorin' u could put flex on my jersey yuh</h4>
