--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="https://www.youtube.com/@c4palot" class="button">2nd yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> jumpout </h2>
+                    <h2 id="dropdown-header1" class="mcbold"> JumpOut! </h2>
                     <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5Vb4K4Xf4KPFupmhHi5COM?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
