--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <a href="https://youtube.com/@capalotr6" class="button">yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> JumpOut! </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5Vb4K4Xf4KPFupmhHi5COM?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> ts album is fire </h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1HQJGuWN0N8WCEpczQpQut?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
