--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/pfp.png" height="100" width="100">
+                    <img src="images/psykotic.png" height="100" width="100">
                     <h1 class=mcbold>c4palot</h1>
-                    <h4 class=dabodytext>kill all jagers</h4>
+                    <h4 class=dabodytext>psykotic 2k25</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/diggydiran/overview" class="button">r6 tracker</a>
                     <a href="https://youtube.com/@capalotr6" class="button">yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> album of the year </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1HQJGuWN0N8WCEpczQpQut?utm_source=generator" width="80%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> im so ALIVE </h2>
+                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5bpj1TjCoBk6EDc6hl8z7P?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
