--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <h1 class=mcbold>c4palot</h1>
                     <h4 class=dabodytext>psykotic 2k25</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/diggydiran/overview" class="button">r6 tracker</a>
-                    <a href="https://youtube.com/@capalotr6" class="button">yt</a>
+                    <a href="https://www.youtube.com/channel/UCU78GKxxcRm3Oi4eW5blcEA" class="button">yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
                     <h2 id="dropdown-header1" class="mcbold"> im so ALIVE </h2>
