--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/pfp_tgt.png" height="100" width="100">
+                    <img src="images/jizz_pfp.jpg" height="100" width="100">
                     <h1 class=mcbold>c4palot</h1>
                     <h4 class=dabodytext>new album</h4>
                     <a href="https://r6.tracker.network/r6siege/profile/ubi/diggydiran/overview" class="button">r6 tracker</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">yt</a>
                     <a href="https://guns.lol/smellthis" class="button">smellthis</a>
 
-                    <h2 id="dropdown-header1" class="mcbold"> THE GOON TAPE </h2>
-                    <center><iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0L7CdFFtyqV7i1D7TYiyTt?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <h2 id="dropdown-header1" class="mcbold"> THE JIZZ TAPE </h2>
+                    <center><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/1jozkwW64SbGkyqNL2ZjGk?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
