--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/elc.png" height="100" width="100">
+                    <img src="images/blondeosama.png" height="100" width="100">
                     <h1 class=mcbold>c4palot</h1>
                     <h4 class=dabodytext>i stream and make music</h4>
                     <a href="https://open.spotify.com/artist/6CI8p2kvVsg4fmUbwRzCsB?si=7b490fdd16aa454f" class="button">spotify</a>
