--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div id="content" class="centered">
                     <img src="images/blondeosama.png" height="100" width="100">
                     <h1 class=mcbold>c4palot</h1>
-                    <h4 class=dabodytext>i stream and make music</h4>
+                    <h4 class=dabodytext>(prod. c4palot)</h4>
                     <a href="https://open.spotify.com/artist/6CI8p2kvVsg4fmUbwRzCsB?si=7b490fdd16aa454f" class="button">spotify</a>
                     <a href="https://www.youtube.com/@c4palot" class="button">yt</a>
                     <a href="https://www.twitch.tv/c4palottv" class="button">twitch</a>
