--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body background="images/background2.png"> 
             <center>
                 <div id="content" class="centered">
-                    <img src="images/blondeosama.png" height="100" width="100">
+                    <img src="images/redcarti.png" height="100" width="100">
                     <h1 class=mcbold>c4palot</h1>
                     <h4 class=dabodytext>(prod. c4palot)</h4>
                     <a href="https://open.spotify.com/artist/6CI8p2kvVsg4fmUbwRzCsB?si=7b490fdd16aa454f" class="button">spotify</a>
@@ -16,7 +16,7 @@
                     <a href="https://www.twitch.tv/c4palottv" class="button">twitch</a>
 
                     <h2 id="dropdown-header1" class="mcbold"> KXD </h2>
-                    <center><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/6xFSO1I1O9iO0QY4EGbPbR?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
+                    <center><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/4hf1itOQBNbHqMCOwFyjsH?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></center>
 
                 </div id="content" class="centered">
                     
